--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <button class="button_" onclick="numbers_('9')">
                         9
                     </button>
-                    <button class="button_operation" onclick="operation_('×')">
+                    <button class="button_operation" onclick="operation_('x')">
                         ×
                     </button>
                 </div>
@@ -71,7 +71,7 @@
                     <button class="button_" onclick="numbers_('6')">
                         6
                     </button>
-                    <button class="button_operation" onclick="operation_('−')">
+                    <button class="button_operation" onclick="operation_('-')">
                         −
                     </button>
                 </div>
